--- a/src/main/webapp/restrito/mainPage.xhtml
+++ b/src/main/webapp/restrito/mainPage.xhtml
@@ -64,6 +64,11 @@
                 <p:dialog id="gmapDialog" widgetVar="dlg" width="800" height="600" appendTo="@(body)">
                     <p:gmap id="gmap" center="-22.133176, -51.402628" zoom="15" type="ROADMAP" style="width:100%;height:100%" />
                 </p:dialog> 
+                <p:commandButton value="Notificações - #{notificacaoGeralController.notificacaoNaoVista}" 
+                                 action="/restrito/gerenciamento/notificacoes" style="width: 98%"
+                                 actionListener="#{notificacaoGeralController.vistarTodos()}"
+                                 process="@this"
+                                 update="@this"/>
             </p:layoutUnit>
             <p:layoutUnit position="center">
                 <div id="content" >
